--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "mobx": "^3.1.7",
     "mobx-logger": "^0.5.0",
     "mobx-react": "^4.1.3",
+    "mobx-react-router": "^3.1.2",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
@@ -39,6 +41,7 @@
     "http-proxy-middleware": "0.17.3",
     "jest": "18.1.0",
     "json-loader": "0.5.4",
+    "mobx-react-devtools": "^4.2.11",
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
